gatekeeper/good_ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: good-ns
  labels:
    "gatekeeper": "true"
